# b6502

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: documentation.yml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml
all/: CMakeLists.txt
cmake/: CompilerWarnings.cmake  FindSDL2.cmake  SourcesAndHeaders.cmake  tools.cmake
documentation/: CMakeLists.txt
documentation/pages/: about.dox
include/b6502/: base.h  bus.h  component.h  display.h  memory.h  mos6502.h  rc.h  reset_manager.h
include/b6502/nes/: ppu.h
src/: base.c  bus.c  display.c  memory.c  mos6502.c  rc.c  reset_manager.c
src/nes/: ppu.c
standalone/: CMakeLists.txt
standalone/src/: main.c
test/: CMakeLists.txt
test/src/: main.c  test_mos6502.c  test_rc.c
